# telkom-domain

./: Cargo.toml  index.css  modal.html
src/: app.rs  lib.rs
src/components/: landing_page_navtop.rs  loading2.rs  logo2.rs  mod.rs  navtop.rs  sidebar.rs  tag_inactive.rs
src/components/developers-note/: Cargo.toml
src/components/landing-page-navtop/: Cargo.toml
src/components/landing-page-navtop/src/: lib.rs
src/components/loading/: Cargo.toml
src/components/loading/src/: lib.rs
src/components/logo/: Cargo.toml
src/components/logo/src/: lib.rs
src/components/navtop/: Cargo.toml
src/components/navtop/src/: lib.rs
src/components/sidebar/: Cargo.toml
src/components/sidebar/src/: lib.rs
src/components/tag-inactive/: Cargo.toml
src/components/tag-inactive/src/: lib.rs
src/configs/: Cargo.toml
src/pages/: mod.rs  reducer_account_view.rs  reducer_global.rs
src/pages/activity/: Cargo.toml
src/pages/activity/src/: lib.rs
src/pages/applications/: mod.rs
src/pages/applications/apis/: home.rs  machinetomachineapplications.rs  permissions.rs  settings.rs  tab_settings.rs
src/pages/applications/apis/apis-home/: Cargo.toml
src/pages/applications/apis/apis-settings/: Cargo.toml
src/pages/applications/apis/apis-settings/src/: lib.rs
src/pages/applications/apis/apis-tab-settings/: Cargo.toml
src/pages/applications/apis/machine-to-machine/: Cargo.toml
src/pages/applications/apis/permissions/: Cargo.toml
src/pages/applications/apis/quickstart/: Cargo.toml
src/pages/applications/apis/tab-settings/: Cargo.toml
src/pages/applications/applications/: home.rs  mod.rs  settings.rs  tab_settings.rs
src/pages/applications/applications/applications-home/: Cargo.toml
src/pages/applications/applications/applications-settings/: Cargo.toml
src/pages/applications/applications/applications-tab-settings/: Cargo.toml
src/pages/applications/applications/connections/: Cargo.toml
src/pages/applications/sso/: home.rs
src/pages/authentication/: mod.rs
src/pages/authentication/database/: create_db.rs  home.rs  settings.rs
src/pages/authentication/database/create-db/: Cargo.toml
src/pages/authentication/database/database-home/: Cargo.toml
src/pages/authentication/database/database-settings/: Cargo.toml
src/pages/authentication/database/database-settings/src/: lib.rs
src/pages/authentication/database/database-tab-applications/: Cargo.toml
src/pages/authentication/database/database-tab-settings/: Cargo.toml
src/pages/authentication/enterprise/: google_apps.rs
src/pages/authentication/enterprise/enterprise-home/: Cargo.toml
src/pages/authentication/enterprise/google-app-create/: Cargo.toml
src/pages/authentication/enterprise/google-apps/: Cargo.toml
src/pages/authentication/passwordless/email-app/: Cargo.toml
src/pages/authentication/passwordless/email-setting/: Cargo.toml
src/pages/authentication/passwordless/email-try/: Cargo.toml
src/pages/authentication/passwordless/passwordless-home/: Cargo.toml
src/pages/authentication/passwordless/passwordless-home/src/: lib.rs
src/pages/authentication/passwordless/sms-app/: Cargo.toml
src/pages/authentication/passwordless/sms-setting/: Cargo.toml
src/pages/authentication/passwordless/sms-try/: Cargo.toml
src/pages/authentication/social/: create.rs  home.rs  settings.rs
src/pages/authentication/social/social-applications/: Cargo.toml
src/pages/authentication/social/social-create/: Cargo.toml
src/pages/authentication/social/social-home/: Cargo.toml
src/pages/authentication/social/social-settings/: Cargo.toml
src/pages/authentication/social/social-settings/src/: lib.rs
src/pages/authentication/social/social-tab-settings/: Cargo.toml
src/pages/getting-started/: Cargo.toml
src/pages/getting-started/src/: lib.rs
src/pages/home-page/: Cargo.toml
src/pages/home-page/src/: lib.rs
src/pages/management/roles/: dropdown_viewdetail.rs  mod.rs  role_created.rs  role_details.rs  tab_setting.rs
src/pages/management/roles/role-details/: Cargo.toml
src/pages/management/roles/role-modal-assign-permissions/: Cargo.toml
src/pages/management/roles/role-modal-assign-users/: Cargo.toml
src/pages/management/roles/role-permissions/: Cargo.toml
src/pages/management/roles/role-settings/: Cargo.toml
src/pages/management/roles/role-settings/src/: lib.rs
src/pages/management/roles/role-users/: Cargo.toml
src/pages/management/roles/role-users/src/: lib.rs
src/pages/management/roles/roles-home/: Cargo.toml
src/pages/management/users/: home.rs  modal_assign_permissions.rs  modal_assign_roles.rs  setting_user_details.rs  setting_user_history.rs  setting_user_permissions.rs  setting_user_roles.rs  user_viewdetail.rs
src/pages/management/users/modal-assign-permissions/: Cargo.toml
src/pages/management/users/modal-assign-roles/: Cargo.toml
src/pages/management/users/user-auth-app/: Cargo.toml
src/pages/management/users/user-details/: Cargo.toml
src/pages/management/users/user-devices/: Cargo.toml
src/pages/management/users/user-histories/: Cargo.toml
src/pages/management/users/user-json/: Cargo.toml
src/pages/management/users/user-modal-assign-permissions/: Cargo.toml
src/pages/management/users/user-modal-assign-roles/: Cargo.toml
src/pages/management/users/user-permissions/: Cargo.toml
src/pages/management/users/user-permissions/src/: lib.rs
src/pages/management/users/user-roles/: Cargo.toml
src/pages/management/users/users-home/: Cargo.toml
src/pages/management/users/users-settings/: Cargo.toml
src/pages/outer/: login_page.rs  register_page.rs
src/pages/outer/login/: Cargo.toml
src/pages/outer/login/src/: lib.rs
src/pages/outer/password/: Cargo.toml
src/pages/outer/register/: Cargo.toml
src/pages/outer/register/src/: lib.rs
src/pages/profile/: Cargo.toml
src/pages/profile/src/: lib.rs
src/pages/settings/: advanced.rs  general.rs  home.rs  tenant_members.rs
src/router/: Cargo.toml
src/router/src/: lib.rs
src/store/: Cargo.toml
src/store/src/: lib.rs
src/types/: Cargo.toml  api.rs
src/types/src/: lib.rs  mod.rs  roles.rs
(+31 files in other folders)
