[package]
name = "telkom-domain"
version = "0.1.0"
authors = ["hackerrank <me@hackerrank.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.18"
yew-router = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
yewdux = "^0.6"
yewtil = "^0.4.0"
anyhow = "1.0.42"
css-in-rust = { version = "^0.5.0", features = ["yew_integration"] }
state = { version = "0.5", features = ["tls"] }

getting-started = { path = "./src/pages/getting-started" }
activity = { path = "./src/pages/activity" }
home-page = { path = "./src/pages/home-page" }
developers-note = { path = "./src/components/developers-note" }
loading = { path = "./src/components/loading" }
logo = { path = "src/components/logo" }
navtop = { path = "src/components/navtop" }
sidebar = { path = "src/components/sidebar" }
tag-inactive = { path = "src/components/tag-inactive" }

apis-home = { path = "src/pages/applications/apis/apis-home" }
apis-settings = { path = "src/pages/applications/apis/apis-settings" }

applications-home = { path = "src/pages/applications/applications/applications-home" }
applications-settings = { path = "src/pages/applications/applications/applications-settings" }

users-home = { path = "src/pages/management/users/users-home" }
users-settings = { path = "src/pages/management/users/users-settings" }

database-home = { path = "src/pages/authentication/database/database-home" }
database-settings = { path = "src/pages/authentication/database/database-settings" }
database-create-db = { path = "src/pages/authentication/database/create-db" }

router = { path = "./src/router" }
types = { path = "./src/types" }
store = { path = "./src/store" }
configs = { path = "./src/configs" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]


[workspace]

members = [
  "src/pages/getting-started",
  "src/pages/activity",
  "src/components/landing-page-navtop",
  "src/components/developers-note",
  "src/components/loading",
  "src/components/logo",
  "src/components/navtop",
  "src/components/sidebar",
  "src/components/tag-inactive",
  "src/pages/home-page",
  "src/router",
  "src/types",
  "src/store",
  "src/configs",

  "src/pages/applications/apis/apis-home",
  "src/pages/applications/apis/apis-settings",
  "src/pages/applications/apis/quickstart",
  "src/pages/applications/apis/apis-tab-settings",
  "src/pages/applications/apis/permissions",
  "src/pages/applications/apis/machine-to-machine",

  "src/pages/applications/applications/applications-home",
  "src/pages/applications/applications/applications-settings",
  "src/pages/applications/applications/applications-tab-settings",
  "src/pages/applications/applications/connections",

  "src/pages/management/users/users-home",
  "src/pages/management/users/users-settings",
  "src/pages/management/users/user-details",
  "src/pages/management/users/user-devices",
  "src/pages/management/users/user-histories",
  "src/pages/management/users/user-json",
  "src/pages/management/users/user-auth-app",
  "src/pages/management/users/user-permissions",
  "src/pages/management/users/user-roles",
  "src/pages/management/users/modal-assign-permissions",
  "src/pages/management/users/modal-assign-roles",

  "src/pages/authentication/database/create-db",
  "src/pages/authentication/database/database-home",
  "src/pages/authentication/database/database-settings",
  "src/pages/authentication/database/database-tab-applications",
  "src/pages/authentication/database/database-tab-settings",

]