[package]
name = "landing-page-navtop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.18"
yew-router = "0.15.0"
yewdux = "^0.6"
yewtil = "^0.4.0"
anyhow = "1.0.42"
store = { path = "../../store" }
router = { path = "../../router" }
types = { path = "../../types" }