[package]
name = "home-page"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yewdux = "^0.6"
css-in-rust = { version = "^0.5.0", features = ["yew_integration"] }
landing-page-navtop = { path = "../../components/landing-page-navtop" }