[package]
name = "login"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yew-router = "0.15.0"
yewtil = "^0.4.0"
yewdux = "^0.6"
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
router = { path = "../../../router" }
store = { path = "../../../store" }
configs = { path = "../../../configs" }
types = { path = "../../../types" }
