[package]
name = "register"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
configs = { path = "../../../configs" }
types = { path = "../../../types" }
