[package]
name = "database-settings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.18"
yew-router = "0.15.0"
router = { path = "../../../../router" }
database-tab-applications = { path = "../database-tab-applications" }
database-tab-settings = { path = "../database-tab-settings" }
