[package]
name = "passwordless-home"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
email-app = { path = "../email-app" }
email-setting = { path = "../email-setting" }
email-try = { path = "../email-try" }
sms-app = { path = "../sms-app" }
sms-setting = { path = "../sms-setting" }
sms-try = { path = "../sms-try" }