[package]
name = "role-settings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.18"
yew-router = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.42"
types = { path = "../../../../types" }
configs = { path = "../../../../configs" }
router = { path = "../../../../router" }