[package]
name = "role-users"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.18"
yew-router = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.42"
configs = { path = "../../../../configs" }
types = { path = "../../../../types" }
loading = { path = "../../../../components/loading" }
role-modal-assign-users = { path = "../role-modal-assign-users" }