[package]
name = "user-histories"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.18"
anyhow = "1.0.42"
types = { path = "../../../../types" }
configs = { path = "../../../../configs" }
loading = { path = "../../../../components/loading" }